--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="yellow">#F8C33E</color>
     <color name="blue">#08C2F1</color>
     <color name="cream">#E9D6D6</color>
+    <color name="cream1">#E9D6C6</color>
 
 </resources>
